
######################
#                    #
#     2021.11.2      #
#                    #
######################
New features and other changes:
1. Changed function Add-JavaException to Add-UserJavaException. It strictly only modifies the exceptions.site file in the user profile and not machine wide.

######################
#                    #
#     2021.11.1      #
#                    #
######################
New features and other changes:
1. Added VSCodeSettingsPath config item and function Copy-VSCodeSettingsToProfile.
2. In WSTools Tray App, moved VS Code items to their own menu, changed some wording, and added some functionality.
3. Changed config file versioning to Year.Month.Revision.
4. Added VSCodeExtRepo config item and function Copy-VSCodeExtensions.

######################
#                    #
#      2021.10       #
#                    #
######################
New features and other changes:
1. Added message to Set-Preferences about needing to log off then back in.
2. Added MECM config file item.
3. Added function Install-MECM.
4. Modified Copy-PowerShellJSON to create User and snippets folders if they don't already exist. $env:APPDATA\Code still has to exist or it will fail.
5. Fixed a variable issue in Test-EmailRelay. Body now appropriately shows recipient address.
6. Addressed an issue where Update-VisioStencils would copy to "$env:USERPROFILE\Documents\My Shapes". While normally correct, if using a service to redirect the Documents folder such as OneDrive it would not copy to the redirected location.
7. Addressed folder redirection issue in Export-MessagesToPST where it wouldn't save to a redirected Desktop.
8. Addressed folder redirection issue in Set-LAPSshortcut where it wouldn't save to a redirected Desktop.
9. Addressed folder redirection issue in Set-NetworkConnectionsShortcut where it wouldn't save to a redirected Desktop.
10. Added CMLibrary config item and function Open-CMLibrary.